--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: thedoctor0/zip-release@master
         with:
-          filename: result.zip
+          filename: MongoConnector.zip
 
       - name: Upload Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "release.zip"
+          artifacts: MongoConnector.zip
           token: ${{ secrets.GITHUB_TOKEN }}
