--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,9 @@
 name: Zip Files
 
 on:
+  push:
+    tags:
+      - '*'
   release:
     types: [published]
   workflow_dispatch:
@@ -18,5 +21,5 @@ jobs:
         with:
           file: MongoConnector.zip
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: "v0.0.0"
+          tag: ${{ github.ref }}
           overwrite: true
